# vaex

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .releash.py  .travis.yml  AUTHORS.txt  CHANGELOG.md  CImg.h  CNAME  CONTRIBUTING.md  INSTALL.txt  MANIFEST.in  MTAuxData.h  MTfor3D.cpp  Makefile  Makefile.am  Makefile.in  MaxTree3d.h  README  README.md  README.rst  RELEASE.md  SECURITY.md  ShortVolume.cpp  ShortVolume.h  appveyor.yml  asv.conf.json  checkrelease.py  combi2.c  configure.ac  credits.md  dodo.py  environment.yml  hello.js  index.html  index.php  kdForSpaces_WithViz.c  kdForSpaces_june21.c  kdForSpaces_using.c  (+23 more)
.circleci/: config.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmarks.yml  pythonpackage.yml  wheel-universal.yml  wheel-windows.yml  wheel.yml  windows-release.yml
benchmark/: examples.py
benchmarks/: README.rst  aggregates.py  bookkeeping.py  export.py  filter.py  fixtures.py  from_csv.py  from_pandas.py  generate.py  groupby.py  groupbyh2o.py  hashmap.py  isin.py  sort.py  strings.py  value_count.py
binder/: requirements.txt
ci/: 01-setup-conda.sh  02-create-vaex-dev-env.sh  03-install-vaex.sh  04-run-test-suite.sh  05-run-notebooks.sh  06-run-contrib-tests.sh  conda-base-minimal.yml  conda-env-extra.yml  conda-env-nightlies.yml  conda-env-notebooks.yml  conda-env.yml  docker-test.sh  runs-in-docker.sh
css/: __style.css  scss-files.txt  style.css  vaex.css
data/: gendata.py  helmi2000-all-to-hdf5.py  scl-photo.csv
docs/: Makefile  make.bat
docs/source/: advanced.ipynb  api.rst  ascii_to_hdf5.c  ascii_to_hdf5.pro  conf.md  conf.py  credits.rst  datasets.ipynb  documentation.rst  example1.py  example_advanced_plotting.ipynb  example_arrow.ipynb  example_async.ipynb  example_caching.ipynb  example_dask.ipynb  example_data_types.ipynb  example_graphql.ipynb  example_io.ipynb  example_jupyter_ipyvolume.ipynb  example_jupyter_plotly.ipynb  example_ml_iris.ipynb  example_ml_titanic.ipynb  example_progressbars.ipynb  examples.rst  examples_hdf5.rst  examples_notebooks.rst  faq.ipynb  gallery.rst  getting_data_in_vaex.rst  gui_reference.rst  guides.rst  icons  index.ipynb  index.rst  installing.rst  ml.ipynb  program.rst  redirects.txt  reference.rst  server.md  (+8 more)
examples/: advanced_plotting.ipynb  bqplot.ipynb  example_1.ipynb  example_arrow.ipynb  example_movies.ipynb  example_ny_taxi.ipynb  example_server.ipynb  example_start.ipynb  example_tables.ipynb  example_virtual_columns.ipynb  example_volume_rendering.ipynb  fileformat.ipynb  healpix.ipynb  healpix_plotting.ipynb  plot_vectors.ipynb  science_pal5_tidal_tails.ipynb  tutorial_ipython_notebook.ipynb  vaex-plotly-examples.ipynb  vaexclient.py  volume_rendering_example.ipynb
experiments/: setup.py  softvolume_test.py  test_gl.py  testvtk.py
git/: README
git/hooks/: post-checkout  post-commit
html/: credits.html  help_index.html  quickstart.html
js/: jquery.client.js  main.js
lib/animate/: animate.css  animate.min.css
lib/counterup/: counterup.min.js
lib/easing/: easing.min.js
lib/superfish/: superfish.js
lib/wow/: wow.js  wow.min.js
licenses/: GLUEVIZ_LICENSE.txt  PYQT_GPL_EXCEPTION.TXT  PYQT_GPL_EXCEPTION_ADDENDUM.TXT  PYQT_LICENSE.GPL2.txt
m4/: ax_boost_python.m4  ax_python_devel.m4  ax_python_numpy.m4
misc/: RELEASE.md  dmgbuild_settings.py  vaex.spec
misc/experiments/: softvolume_test.py  test_gl.py  testvtk.py
misc/gist/: promises_exceptions.py  qt_and_tornado.py
misc/license/: jprops
misc/test/: testgavifast.py  webserver.py
misc/web/: hello.js  index.html  index.php  install_pip.sh  nyt.html  vaex.ext.bqplot.js
new/: Readme.txt  index.html
new/contactform/: Readme.txt  contactform.js
new/css/: style.css
old/: CNAME  bqplot.js  index.html  install_pip.sh
old/_new/: blog-details.html  index.html
python/: backend_wx.py  backend_wxagg.py  plot_density.py  test_kde.py
python/gavi/: dataset.py  dataset_utils.py  events.py  histogram.py  iniscope.py  kde.py  kld.py  logging.py  multithreading.py  pandawrap.py  progressbar.py  samp.py  selection.py  utils.py  wxui.py
python/vaex/: __init__.py  benchmark.py  dataset.py  dataset_utils.py  datasets.py  distributed.py  events.py  examples.py  (+23 more)
src/: MTfor3D_forC.cpp  MTfor3DwithMain.cpp  Makefile.am  Makefile.in  MaxTree3d.cpp  MaxTree3dDynamic.cpp  Queue.h  SimpleShortVolume.cpp  SimpleShortVolume.h  avs_io.c  avs_io.h  combi2copy.c  definitions.h  gavi.cpp  kdForSpaces.c  kdForSpaces_getViz.c  kdForSpaces_usingV2.c  kdForSpaces_usingV2scott.c  kdForSpaces_withTiming.c  kerneldensity.c  kerneldensity.h  kerneldensityNew.c  kerneldensity_program.c  maxtreeForSpaces.c  maxtreeForSpaces.h  pca.c  pgm.c  pgm.h  pixel_qsort.c  pixel_qsortS.c  python_binding.cpp  test1.cpp
src/gavifast/: gavi.cpp
src/vaex/: vaexfast.cpp  vaexfast_template.cpp
test/: dataset.py  softvolume_test.py  testgavifast.py  testvtk.py  ui.py
tests/: agg_test.py  agg_tests.py  apply_test.py  astype_test.py  async_test.py  cache_test.py  cast_to_array_test.py  category_test.py  cloud_dataset_test.py  column_names_test.py  column_operations_test.py  column_test.py  common.py  compute_test.py  concat_test.py  conftest.py  copy_test.py  cornercases_test.py  correlation_test.py  count_test.py  countna_test.py  csv_test.py  dask_array_test.py  dask_test.py  dataframe_protocol_test.py  dataset_test.py  datetime_test.py  derivative_test.py  describe_test.py  dot_product_test.py  drop_duplicates_test.py  drop_test.py  dropinf_test.py  dropna_test.py  dtypes_test.py  encoding_test.py  endian_test.py  evaluate_test.py  execution_test.py  export_test.py  (+91 more)
vaex/: __init__.py  __main__.py  caching.py  dataset.py  datasets.py  distributed.py  events.py  execution.py  export.py  expresso.py  grids.py  image.py  legacy.py  loggingconf.py  misc_cmdline.py  plot.py  promise.py  quick.py  remote.py  samp.py  settings.py  utils.py  version.py  webserver.py
(+263 files in other folders)
