bin_PROGRAMS = kdForSpaces_usingV2scott
kdForSpaces_usingV2scott_SOURCES = kdForSpaces_usingV2scott.c
kdForSpaces_usingV2scott_LDADD = libsubfind.a -lstdc++
#kdForSpaces_usingV2scott_LINK = $(CXX)
noinst_HEADERS = ShortVolume.h SimpleShortVolume.h definitions.h avs_io.h MaxTree3d.h MTAuxData.h Queue.h kerneldensity.h
lib_LIBRARIES = libsubfind.a
libsubfind_a_SOURCES = ShortVolume.cpp SimpleShortVolume.cpp MTfor3D_forC.cpp avs_io.c MaxTree3d.cpp pixel_qsortS.c combi2.c maxtreeForSpaces.c MTfor3D.cpp pca.c
